# aoc-2021

./: README.md
rust/: .gitignore  Cargo.toml
rust/benches/: day1.rs  day2.rs
rust/src/: lib.rs  main.rs
rust/src/day1/: mod.rs  notes.md
rust/src/day2/: mod.rs  notes.md
rust/src/day3/: mod.rs  notes.md
rust/src/day4/: mod.rs  notes.md
rust/src/day5/: mod.rs  notes.md
rust/src/day6/: mod.rs  notes.md
rust/src/day7/: mod.rs  notes.md
rust/src/day8/: mod.rs  notes.md
rust/src/util/: mod.rs
