[package]
name = "aoc-2021-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
derive_more = "0.99.0"

[[bench]]
name = "day1"
harness = false